--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: lena's life
+title: lena
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: a digital exhibit of lena's life
+tagline: a digital exhibit of my life!
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "a digital exhibit of lena's life"
