--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Lena Archives
+title: LENA ARCHIVES
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: A digital exhibit of my life!
 # description appears in meta tags and other locations
