--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,7 +8,7 @@
 #
 # featured image is used in home page banner and in meta markup to represent the collection
 # use either an objectid (from an item in this collect), a relative location of an image in this repo (ex. /assets/img/feature.jpg), or a full url to an image elsewhere
-featured-image: https://i.pinimg.com/736x/d6/38/53/d638537dd07d46a53fe1a7bc35e50e97--george-harrison-john-lennon.jpg
+featured-image: https://beatleslane.com/wallpapers/wallpaper-beatleslane004-1024.jpg
 home-title-y-padding: 10em # Default is 8em
 # optional: change position of background image, center, top, bottom
 home-banner-image-position: # Default is center
