--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -76,13 +76,13 @@ navbar-background: bg-dark
 # BOOTSWATCH THEMES
 # You can replace the standard Bootstrap theme with a Bootswatch (https://github.com/thomaspark/bootswatch) option
 # Enter one of the following options below: cerulean; cosmo; cyborg; darkly; flatly; journal; litera; lumen; lux; materia; minty; pulse; sandstone; simplex; sketchy; slate; solar; spacelab; superhero; united; yeti 
-bootswatch: darkly # leave blank or comment out for plain bootstrap
+bootswatch: lumen # leave blank or comment out for plain bootstrap
 
 # THEME FONTS
 base-font-size: 1.2em
 text-color: "#f3f6f4"
 link-color: "#0d6efd"
-base-font-family: Helvetica Neue # comment out for bootstrap defaults. e.g. Roboto
+base-font-family: Helvetica Bold # comment out for bootstrap defaults. e.g. Roboto
 font-cdn: # add font stylesheet, e.g. <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 # THEME ICONS [optional!]
