--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -82,7 +82,7 @@ bootswatch: lumen # leave blank or comment out for plain bootstrap
 base-font-size: 1.2em
 text-color: "#f3f6f4"
 link-color: "#0d6efd"
-base-font-family: Helvetica Bold # comment out for bootstrap defaults. e.g. Roboto
+base-font-family: Helvetica Neue # comment out for bootstrap defaults. e.g. Roboto
 font-cdn: # add font stylesheet, e.g. <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
 # THEME ICONS [optional!]
