--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -80,7 +80,7 @@ bootswatch: litera # leave blank or comment out for plain bootstrap
 
 # THEME FONTS
 base-font-size: 1.2em
-text-color: "#f3f6f4"
+text-color: "#1c1c1c"
 link-color: "#0d6efd"
 base-font-family: Helvetica Neue # comment out for bootstrap defaults. e.g. Roboto
 font-cdn: # add font stylesheet, e.g. <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
